# llm-assistant

./: .gitignore  README.md
src/llm-voice-assistant-client/: config.toml  main.py  mcp_client.py  mcpserver.py  pyproject.toml  textToText.py
src/llm-voice-assistant-client/chat-history/: chat-history-19cc7f7a3fdddea4.json  chat-history-1b634deede10670d.json  chat-history-1d63d6e2df6587f9.json  chat-history-45b69856c0a2dd42.json  chat-history-48be47a2cab0b7f1.json  chat-history-505f908b53172a8f.json  chat-history-510c43bfed808fbd.json  chat-history-56e2745dc65df791.json  chat-history-68668de752980673.json  chat-history-6e730a09b9805cf2.json  chat-history-7f980d3dce4a3c83.json  chat-history-80f28b64276c4d56.json  chat-history-bf718786a213f4de.json  chat-history-bf9276eb687f30ae.json  chat-history-cf03321340ff0812.json  chat-history-dce63bcfba497414.json  chat-history-e7f1c3e3f43fe1ae.json  chat-history-eddbd0adc58b6d72.json  chat-history-f6d1d21abc1fca7f.json
src/llm-voice-assistant-client/system-prompts/: default-prompt.txt
src/llm-voice-assistant-client/tts-models/: piper-models.json
src/llm-voice-assistant-server/: docker-compose.yml
