[project]
name = "llm-voice-assistant-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.76.0",
    "lingua-language-detector==2.1.1",
    "mcp>=1.25.0",
    "nltk==3.9.1",
    "numpy<2.0",
    "onnxruntime==1.23.2",
    "openai==2.5.0",
    "openwakeword==0.6.0",
    "pyaudio==0.2.14",
    "python-dotenv>=1.2.1",
    "requests==2.32.4",
    "simpleaudio==1.0.4",
]
